--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
-  "buildCommand": "echo 'Building...'",
-  "outputDirectory": "./",
-  "framework": "other"
+  "name": "construction-sample",
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
